# tew

./: CLAUDE.md  Lobby_Log.txt  MCity_Log.txt  NUL  emulator.json  main.py  pyproject.toml  registry.json  run_exe.py
.harness/: Build_drazisil_tew_1777043281219-pr-trigger-input-set-1777043283053.yaml  Build_drazisil_tew_1777043281219-push-trigger-input-set-1777043284298.yaml
.harness/pipelines/: tew-1777043277732.yaml
cpu/: build.zig  build.zig.zon
cpu/src/: cpu.zig  main.zig
memory/: changelog.md  status.md
tests/unit/api/: test_advapi32_registry_enum.py  test_advapi32_registry_enum_invalid.py  test_chaos_sync.py  test_kernel32_cs.py  test_kernel32_mutex.py  test_msvcrt_realloc.py  test_msvcrt_write.py  test_user32_hook_chain.py
tests/unit/emulator/: test_opcodes_arithmetic.py  test_opcodes_control_flow.py  test_opcodes_mov.py  test_opcodes_string.py  test_opcodes_two_byte.py
tests/unit/hardware/: test_cpu.py  test_memory.py
tests/unit/kernel/: test_bitmap_loader.py  test_char_type.py  test_duplicate_handle.py  test_heap.py  test_ini_file.py  test_kernel.py  test_kernel_structures.py  test_last_error.py  test_lc_map.py  test_scheduler.py  (+2 more)
tew/: __init__.py  helpers.py  logger.py
tew/api/: _state.py  advapi32_handlers.py  bitmap_loader.py  char_type.py  crt_handlers.py  d3d8_handlers.py  dialog_renderer.py  ini_file.py  kernel32_handlers.py  kernel32_io.py  kernel32_locale.py  kernel32_memory.py  kernel32_sync.py  kernel32_system.py  lc_map.py  msvcrt_handlers.py  oleaut32_handlers.py  patch_internals.py  pe_resources.py  user32_handlers.py  version_handlers.py  win32_errors.py  win32_handlers.py  window_manager.py  wininet_handlers.py  wsock32_handlers.py
tew/hardware/: cpu.py  cpu_zig.py  memory.py
tew/kernel/: exception_diagnostics.py  kernel.py  kernel_structures.py  scheduler.py
tew/loader/: dll_loader.py  import_resolver.py
tew/pe/: base_relocation_table.py  bound_import_table.py  coff_file_header.py  data_directory.py  debug_directory.py  delay_import_table.py  exception_table.py  exe_file.py  export_table.py  import_table.py  load_config_directory.py  optional_header.py  section_header.py  tls_table.py
(+23 files in other folders)
