[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tew"
version = "0.6.0"
description = "Motor City Online x86 Emulator with Graphics (Python port)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["tew"]
