[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tew"
version = "0.7.0"
description = "Motor City Online x86 Emulator with Graphics (Python port)"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff.lint]
ignore = [
    "E701",  # single-line if — used intentionally for compact condition code tables
    "E702",  # semicolon-separated statements — used intentionally for paired flag sets
]

[tool.hatch.build.targets.wheel]
packages = ["tew"]
