[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tew"
version = "0.7.0"
description = "Motor City Online x86 Emulator with Graphics (Python port)"
requires-python = ">=3.12"
dependencies = [
    "pysdl2>=0.9.17",
    "pysdl2-dll>=2.32.0",
    "PyOpenGL>=3.1.10",
    "numpy>=2.4.4",
    "vulkan>=1.3.275.1",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff.lint]
ignore = [
    "E701",  # single-line if — used intentionally for compact condition code tables
    "E702",  # semicolon-separated statements — used intentionally for paired flag sets
]

[tool.hatch.build.targets.wheel]
packages = ["tew"]
